--- a/appstate.json
+++ b/appstate.json
@@ -1,4 +1,146 @@
-credits by🥀Ayan Choudhury🥀
-
-
-#All text remove and send this you bot cookie now 
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261556241248673%22%3A%22cA1JX2I7%22%2C%22100094428030708%22%3A%22aT8BDGhy%22%2C%22100034499621290%22%3A%22rKtfNLth%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.795Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "m_ls",
+        "value": "%7B%22100001453534533%22%3A%7B%22c%22%3A%7B%221%22%3A%22HCwAABbQsAMWuOr7rQITBRaKtevx7LwtAA%22%2C%222%22%3A%22GSwVQBxMAAAWARaSx5PfDBYAABV-HEwAABYAFpLHk98MFgAAFigA%22%2C%2295%22%3A%22HCwAABYgFtScjoUJEwUWirXr8ey8LQA%22%7D%2C%22d%22%3A%22f84dd605-4abd-431b-870b-9566dc9a1ca5%22%2C%22s%22%3A%220%22%2C%22u%22%3A%22n3koj1%22%7D%2C%22100034499621290%22%3A%7B%22c%22%3A%7B%221%22%3A%22HCwAABYwFvaTxNYBEwUW1MaFjeO-LQA%22%2C%222%22%3A%22GSwVQBxMAAAWARawwpffDBYAABV-HEwAABYAFrDCl98MFgAAFigA%22%2C%2295%22%3A%22HCwAABYQFs7D4b4KEwUW1MaFjeO-LQA%22%7D%2C%22d%22%3A%226fe8fcd4-67b8-4552-9b88-5312e7e5a72d%22%2C%22s%22%3A%221%22%2C%22u%22%3A%2258604b%22%7D%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "sb",
+        "value": "sH8BZi0M5Pg_Mfk8tFyFu_2p",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "datr",
+        "value": "wdBCZp-7bMCvYGnuyyCdiv_T",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "3.0234789848327637",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "wd",
+        "value": "393x873",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100034499621290",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "fr",
+        "value": "19MEWFirjhG9Pyn3L.AWWRksAbMDDdpkNubzcsrWaqCs8.BmStrR..AAA.0.0.BmWBoM.AWV9DM2_vQY",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "xs",
+        "value": "46%3AkyRvGBCwjA4HWg%3A2%3A1717049868%3A-1%3A5134",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101325415%3BT%3A28617497",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2515%3Btimestamp%3A1717049874",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B697x357x3.0234789848327637",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    },
+    {
+        "key": "m_page_voice",
+        "value": "100034499621290",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:18:01.796Z",
+        "lastAccessed": "2024-05-30T06:18:01.796Z"
+    }
+]
