--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.795Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
+        "creation": "2024-05-30T06:29:38.159Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
     },
     {
         "key": "m_ls",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
     },
     {
         "key": "datr",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -59,44 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
-    },
-    {
-        "key": "wd",
-        "value": "393x873",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
-    },
-    {
-        "key": "c_user",
-        "value": "100034499621290",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
-    },
-    {
-        "key": "fr",
-        "value": "19MEWFirjhG9Pyn3L.AWWRksAbMDDdpkNubzcsrWaqCs8.BmStrR..AAA.0.0.BmWBoM.AWV9DM2_vQY",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
-    },
-    {
-        "key": "xs",
-        "value": "46%3AkyRvGBCwjA4HWg%3A2%3A1717049868%3A-1%3A5134",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
     },
     {
         "key": "locale",
@@ -104,17 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101325415%3BT%3A28617497",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
     },
     {
         "key": "wl_cbv",
@@ -122,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
     },
     {
         "key": "vpd",
@@ -131,16 +86,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
     },
     {
-        "key": "m_page_voice",
+        "key": "dpr",
+        "value": "3.0234789848327637",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
+    },
+    {
+        "key": "wd",
+        "value": "981x1915",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
+    },
+    {
+        "key": "c_user",
         "value": "100034499621290",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T06:18:01.796Z",
-        "lastAccessed": "2024-05-30T06:18:01.796Z"
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
+    },
+    {
+        "key": "xs",
+        "value": "42%3AO3f0zgohDd0jyg%3A2%3A1717050573%3A-1%3A5134",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
+    },
+    {
+        "key": "fr",
+        "value": "19MEWFirjhG9Pyn3L.AWU3hULK4_BNr0po0pKU5czIDEA.BmStrR..AAA.0.0.BmWBzO.AWWYJMG1FE8",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-05-30T06:29:38.160Z",
+        "lastAccessed": "2024-05-30T06:29:38.160Z"
     }
 ]
