--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261556241248673%22%3A%22cA1JX2I7%22%2C%22100094428030708%22%3A%22aT8BDGhy%22%2C%22100034499621290%22%3A%22vUcDqCrC%22%7D",
+        "value": "%7B%2261556241248673%22%3A%22cA1JX2I7%22%2C%22100094428030708%22%3A%22aT8BDGhy%22%2C%22100034499621290%22%3A%22i90If66E%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.579Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.228Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "m_ls",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "datr",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "wl_cbv",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "vpd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "dpr",
@@ -95,8 +95,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "wd",
@@ -104,8 +104,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "c_user",
@@ -113,34 +113,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "xs",
-        "value": "46%3AYP8qiv08lqIrFg%3A2%3A1717077280%3A-1%3A5134",
+        "value": "3%3A8FXZdr2SPKaQYQ%3A2%3A1717078345%3A-1%3A5134",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     },
     {
         "key": "fr",
-        "value": "1eHhOVi1vpN1avPf6.AWXj5wk3_61rNK37Bkpvtb1i5sk.BmWB9y..AAA.0.0.BmWIUi.AWUmOq6tHDw",
+        "value": "1eHhOVi1vpN1avPf6.AWUgpxBejOUPwBIJGSzQpKKUkrs.BmWB9y..AAA.0.0.BmWIlL.AWV7nA13bAE",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1717077318269%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-05-30T13:55:22.581Z",
-        "lastAccessed": "2024-05-30T13:55:22.581Z"
+        "creation": "2024-05-30T14:12:32.229Z",
+        "lastAccessed": "2024-05-30T14:12:32.229Z"
     }
 ]
